# flowpipe-celery-adapter

./: LICENSE  README.md  pyproject.toml
example/: docker-compose.yml  test_evaluate_graph_in_celery.py
example/app/: Dockerfile  boot.sh
example/nodes/: nodes.py
flowpipe_celery_adapter/: __init__.py  celery_flowpipe_task.py  utils.py
tests/: test_evaluate_graph_in_celery.py  test_utils.py
tests/app/: app.py  boot.sh  requirements.txt
